list secrets which belongs to cluster
